chore: fix landing page layout on mobile device

--- a/src/pages/styles.module.css
+++ b/src/pages/styles.module.css
@@ -46,7 +46,7 @@
 .features {
   display: flex;
   align-items: center;
-  padding: 6rem 0;
+  padding: 5rem 0 4rem;
   width: 100%;
 }
 
@@ -62,6 +62,7 @@
   display: flex !important;
   flex-direction: column;
   align-items: center;
+  padding: 32px 16px;
 }
 
 .featureImage {
